// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: members 1`] = `
[
  "42-module-name/README.md",
  "<internal>/README.md",
  "@scope_name/README.md",
  "README.md",
  "basic/README.md",
  "basic/classes/ClassA.md",
  "basic/classes/ClassB.md",
  "basic/enumerations/EnumA.md",
  "basic/enumerations/EnumB.md",
  "basic/interfaces/InterfaceA.md",
  "basic/interfaces/InterfaceB.md",
  "basic/type-aliases/TypeA.md",
  "basic/type-aliases/TypeB.md",
  "has-categories/README.md",
  "has-categories/enumerations/CategoryAEnum1.md",
  "has-categories/enumerations/CategoryAEnum2.md",
  "has-categories/enumerations/CategoryBEnum1.md",
  "has-categories/enumerations/CategoryBEnum2.md",
  "has-categories/enumerations/UnCategorizedEnum.md",
  "has-categories/interfaces/CategoryAInterface1.md",
  "has-categories/interfaces/CategoryAInterface2.md",
  "has-categories/interfaces/CategoryBInterface1.md",
  "has-categories/interfaces/CategoryBInterface2.md",
  "has-categories/interfaces/UnCategorizedInterace.md",
  "has-namespaces/README.md",
  "has-namespaces/classes/ClassB.md",
  "has-namespaces/classes/Class_A_.md",
  "has-namespaces/enumerations/EnumB.md",
  "has-namespaces/enumerations/Enum_A_.md",
  "has-namespaces/functions/functionB.md",
  "has-namespaces/functions/function_A_.md",
  "has-namespaces/interfaces/InterfaceB.md",
  "has-namespaces/interfaces/Interface_A_.md",
  "has-namespaces/namespaces/NamespaceB/README.md",
  "has-namespaces/namespaces/Namespace_A_/README.md",
  "has-namespaces/namespaces/Namespace_A_/interfaces/NamespaceInterface.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/README.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/interfaces/NamespaceInterface.md",
  "has-namespaces/type-aliases/TypeB.md",
  "has-namespaces/type-aliases/Type_A_.md",
  "has-namespaces/variables/variableB.md",
  "has-namespaces/variables/variable_A_.md",
  "has-references/README.md",
  "has-references/functions/defaultFunction.md",
  "index/README.md",
  "modules.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: members 2`] = `
[
  "42-module-name/index.md",
  "<internal>/index.md",
  "@scope_name/index.md",
  "basic/classes/ClassA.md",
  "basic/classes/ClassB.md",
  "basic/enumerations/EnumA.md",
  "basic/enumerations/EnumB.md",
  "basic/index.md",
  "basic/interfaces/InterfaceA.md",
  "basic/interfaces/InterfaceB.md",
  "has-categories/enumerations/CategoryAEnum1.md",
  "has-categories/enumerations/CategoryAEnum2.md",
  "has-categories/enumerations/CategoryBEnum1.md",
  "has-categories/enumerations/CategoryBEnum2.md",
  "has-categories/enumerations/UnCategorizedEnum.md",
  "has-categories/index.md",
  "has-categories/interfaces/CategoryAInterface1.md",
  "has-categories/interfaces/CategoryAInterface2.md",
  "has-categories/interfaces/CategoryBInterface1.md",
  "has-categories/interfaces/CategoryBInterface2.md",
  "has-categories/interfaces/UnCategorizedInterace.md",
  "has-namespaces/classes/ClassB.md",
  "has-namespaces/classes/Class_A_.md",
  "has-namespaces/enumerations/EnumB.md",
  "has-namespaces/enumerations/Enum_A_.md",
  "has-namespaces/index.md",
  "has-namespaces/interfaces/InterfaceB.md",
  "has-namespaces/interfaces/Interface_A_.md",
  "has-namespaces/namespaces/NamespaceB/index.md",
  "has-namespaces/namespaces/Namespace_A_/index.md",
  "has-namespaces/namespaces/Namespace_A_/interfaces/NamespaceInterface.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/index.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/interfaces/NamespaceInterface.md",
  "has-references/index.md",
  "index.md",
  "module.index/index.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: modules 1`] = `
[
  "42-module-name.md",
  "<internal>.md",
  "@scope_name.md",
  "README.md",
  "basic.md",
  "has-categories.md",
  "has-namespaces/README.md",
  "has-namespaces/namespaces/NamespaceB.md",
  "has-namespaces/namespaces/Namespace_A_/README.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace.md",
  "has-references.md",
  "index.md",
  "modules.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: modules 2`] = `
[
  "42-module-name.md",
  "<internal>.md",
  "@scope_name.md",
  "basic.md",
  "has-categories.md",
  "has-namespaces/index.md",
  "has-namespaces/namespaces/NamespaceB.md",
  "has-namespaces/namespaces/Namespace_A_/index.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace.md",
  "has-references.md",
  "index.md",
  "module.index.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: members 1`] = `
[
  "README.md",
  "modules.md",
  "package-1/README.md",
  "package-1/interfaces/PackageInterface.md",
  "package-1/modules.md",
  "package-2/README.md",
  "package-2/interfaces/PackageInterface.md",
  "package-2/modules.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: members 2`] = `
[
  "README.md",
  "package-1/README.md",
  "package-1/interfaces/PackageInterface.md",
  "package-1/modules.md",
  "package-2/README.md",
  "package-2/interfaces/PackageInterface.md",
  "package-2/modules.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "modules.md",
  "package-1/README.md",
  "package-1/modules.md",
  "package-2/README.md",
  "package-2/modules.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: modules 2`] = `
[
  "README.md",
  "package-1/README.md",
  "package-1/modules.md",
  "package-2/README.md",
  "package-2/modules.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: members 1`] = `
[
  "README.md",
  "classes/AbstractClass.md",
  "classes/ClassWithAccessors.md",
  "classes/ClassWithConstructorOverloads.md",
  "classes/ClassWithModifiers.md",
  "classes/ClassWithTypeParameters.md",
  "classes/DerivedClassA.md",
  "classes/DerivedClassB.md",
  "enumerations/BasicEnum.md",
  "enumerations/EnumWithValues.md",
  "exports.md",
  "functions/basicFunction.md",
  "functions/functionReturningAFunction.md",
  "functions/functionReturningAPromise.md",
  "functions/functionReturningAnObject.md",
  "functions/functionWithDefaultParameters.md",
  "functions/functionWithMultipleSignatures.md",
  "functions/functionWithNamedParams.md",
  "functions/functionWithNestedParameters.md",
  "functions/functionWithOptionalParameters.md",
  "functions/functionWithTypeParameters.md",
  "interfaces/BasicInterface.md",
  "interfaces/ExtendedInterface.md",
  "interfaces/IndexableInterface.md",
  "interfaces/InterfaceWithTypeParameters.md",
  "type-aliases/ArrayOfStuff.md",
  "type-aliases/ArrayType.md",
  "type-aliases/ConditionalType.md",
  "type-aliases/ExternalReferenceType.md",
  "type-aliases/FunctionType.md",
  "type-aliases/IndexAccessType.md",
  "type-aliases/IntersectionType.md",
  "type-aliases/LiteralType.md",
  "type-aliases/PartialMappedType.md",
  "type-aliases/PrimitiveType.md",
  "type-aliases/ReadonlyMappedType.md",
  "type-aliases/StringLiteralType.md",
  "type-aliases/TupleType.md",
  "type-aliases/TypeWithExternalSymbolLinkMapping.md",
  "type-aliases/TypeWithTypeParams.md",
  "type-aliases/UnionType.md",
  "variables/objectLiteralVariable.md",
  "variables/stringVariable.md",
  "variables/typeOperatorVariable.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: members 2`] = `
[
  "classes/AbstractClass.md",
  "classes/ClassWithAccessors.md",
  "classes/ClassWithConstructorOverloads.md",
  "classes/ClassWithModifiers.md",
  "classes/ClassWithTypeParameters.md",
  "classes/DerivedClassA.md",
  "classes/DerivedClassB.md",
  "enumerations/BasicEnum.md",
  "enumerations/EnumWithValues.md",
  "functions/basicFunction.md",
  "functions/functionReturningAFunction.md",
  "functions/functionReturningAPromise.md",
  "functions/functionReturningAnObject.md",
  "functions/functionWithDefaultParameters.md",
  "functions/functionWithMultipleSignatures.md",
  "functions/functionWithNamedParams.md",
  "functions/functionWithNestedParameters.md",
  "functions/functionWithOptionalParameters.md",
  "functions/functionWithTypeParameters.md",
  "index.md",
  "interfaces/BasicInterface.md",
  "interfaces/ExtendedInterface.md",
  "interfaces/IndexableInterface.md",
  "interfaces/InterfaceWithTypeParameters.md",
  "type-aliases/ArrayOfStuff.md",
  "type-aliases/ArrayType.md",
  "type-aliases/ConditionalType.md",
  "type-aliases/ExternalReferenceType.md",
  "type-aliases/FunctionType.md",
  "type-aliases/IndexAccessType.md",
  "type-aliases/IntersectionType.md",
  "type-aliases/LiteralType.md",
  "type-aliases/PartialMappedType.md",
  "type-aliases/PrimitiveType.md",
  "type-aliases/ReadonlyMappedType.md",
  "type-aliases/StringLiteralType.md",
  "type-aliases/TupleType.md",
  "type-aliases/TypeWithExternalSymbolLinkMapping.md",
  "type-aliases/TypeWithTypeParams.md",
  "type-aliases/UnionType.md",
  "variables/objectLiteralVariable.md",
  "variables/stringVariable.md",
  "variables/typeOperatorVariable.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "exports.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: modules 2`] = `
[
  "index.md",
]
`;
